# fastapi_zero

./: .gitignore  README.md  memory  pyproject.toml  settings.py
exercicios/: exercicio_aula2.py  exercicio_aula3.py
fastapi_zero/: app.py  exercicio_aula2.py  models.py
tests/: conftest.py  test_app.py  test_db.py
